<resources>
    <string name="app_name">GestionTaches</string>
    <string name="toolbar_title">Liste des tâches</string>
    <string name="todo">Ajouter une tâche</string>
    <string name="titre_de_la_t_che">Titre de la tâche</string>
    <string name="description_de_la_t_che">Description de la tâche</string>
    <string name="date_de_la_t_che">Date de la tâche</string>
    <string name="statut_de_la_t_che" />
    <string name="statut_de_la_t_ches">Statut de la tâche</string>
    <string name="date">Date</string>
    <string name="description_de_la_t_ches">Description de la tâche</string>
    <string name="titre_de_la_t_ches">Titre de la tâche</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loogin">Login</string>
    <string name="login_icon">Login Icon</string>
    <string name="register">Register</string>
    <string name="name">UserName</string>
    <string name="eemail">Email</string>
    <string name="passwordd">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registere">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="d_connexion">Déconnexion</string>

    <string name="error_username_required">Username est requis.</string>
    <string name="error_email_required">Email est requis.</string>
    <string name="error_invalid_email">Veuillez entrer un email valide.</string>
    <string name="error_password_required">Le mot de passe est requis.</string>
    <string name="error_password_too_short">Le mot de passe doit contenir au moins 6 caractères.</string>
    <string name="error_confirm_password_required">Veuillez confirmer votre mot de passe.</string>
    <string name="error_password_mismatch">Les mots de passe ne correspondent pas.</string>
    <string name="toolbar_icon_desc" />
    <string name="recycler_view_title">La Liste des Taches</string>
    <string name="mes_taches">mes taches</string>
    <string name="mes_cartes">mes cartes</string>
    <string name="mes_consommataions">mes consommations</string>
    <string name="consultation_de_points">consultation de points</string>
    <string name="recharge_e_recharge"> E-recharge</string>
    <string name="nous_contacter">nous contacter</string>
    <string name="deconnexion">deconnexion</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="user_image_description" />

    <string-array name="task_status_array">
        <item>À faire</item>
        <item>En cours</item>
        <item>Terminé</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mes_types">mes types</string>
    <string name="logout">logout</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="changer_email">Changer Email</string>
    <string name="changer_password">Changer password</string>
    <string name="changer_mot_de_passe">Changer Mot de passe</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="nouveau_email">nouveau Email</string>
    <string name="current_password">Current Password</string>
    <string name="mot_de_passe_actuel">Mot de passe Actuel</string>
    <string name="nouveau_mot_de_passe">nouveau Mot de passe</string>
    <string name="confirmez_mot_de_passe">Confirmez Mot de passe</string>
    <string name="mot_de_passe">mot de passe</string>
</resources>